--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@element-plus/nuxt": "^1.0.6",
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.1",
+    "prisma": "^5.5.2",
     "sass": "^1.69.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    
+    "@prisma/client": "^5.5.2",
     "element-plus": "^2.4.2"
   }
 }
