--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "element-plus": "^2.4.2",
-    "formidable": "^3.5.1",
-    "h3": "^1.8.2"
+    "formidable": "^3.5.1"
   }
 }
