--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "element-plus": "^2.4.2",
-    "formidable": "^3.5.1"
+    "formidable": "^3.5.1",
+    "spark-md5": "^3.0.2"
   }
 }
